# elif.rs

./: .cursorrules  .gitignore  BOOTSTRAP_DOCUMENTATION_UPDATE.md  CLAUDE.md  Cargo.toml  ELIF_TESTING_INTEGRATION_COMPLETE.md  IMPROVED_REQUEST_API_EXAMPLES.md  INTEGRATION_TEST_COMPARISON.md  LICENSE  MIDDLEWARE_MIGRATION_STATUS.md  PHASE2_REFACTOR_PROGRESS.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  README.md  REQUEST_API_DEMO.md  TESTING_GUIDELINES.md  clippy.toml  middleware-redesign-plan.md  middleware_integration_example.md  mkdocs.yml  pr.diff  prd.md  test-module-registry.rs  test_emails.json  test_trait_parsing.rs
apps/api/: Cargo.toml
apps/api/src/: introspection.rs  main.rs
crates/cli/: Cargo.toml  README.md  optimization-report.json  status-report.json  test-collection.json  test-workspace.json
crates/cli/examples/: cli_usage_demo.rs
crates/cli/src/: command_system.rs  interactive.rs  main.rs  route_cache.rs  utils.rs
crates/cli/templates/: api_docs.stub  api_routes.stub  app_controller.stub  app_module.stub  app_module_bootstrap.stub  app_service.stub  cargo_toml.stub  cargo_toml.tera  controller.stub  controllers_mod.stub  create_request.stub  factory.stub  main_api.stub  main_api.tera  main_bootstrap.stub  main_custom_addr.stub  main_minimal.stub  main_modular.stub  main_zero_boilerplate.stub  middleware.stub  migration.stub  model.stub  module_services.stub  openapi_spec.stub  policy.stub  resource_response.stub  service.stub  services_mod.stub  test.stub  update_request.stub  user_controller.stub  user_service.stub
crates/codegen/: Cargo.toml
crates/codegen/src/: generator.rs  lib.rs  templates.rs  writer.rs
crates/core/: Cargo.toml
crates/core/benches/: module_runtime_benchmarks.rs
crates/core/examples/: service_composition.rs
crates/core/src/: app_config.rs  config.rs  config_derive.rs  container.rs  error.rs  lib.rs  module.rs  provider.rs  spec.rs
crates/core/tests/: module_runtime_integration_tests.rs  token_injection_tests.rs
crates/elif/: Cargo.toml
crates/elif-auth/: Cargo.toml  README.md
crates/elif-auth/src/: config.rs  error.rs  lib.rs  rbac.rs  traits.rs  utils.rs
crates/elif-cache/: Cargo.toml
crates/elif-cache/benches/: lru_performance.rs
crates/elif-cache/src/: config.rs  http_cache.rs  invalidation.rs  lib.rs  middleware.rs  tagging.rs  warming.rs
crates/elif-core-derive/: Cargo.toml  README.md
crates/elif-core-derive/src/: injectable.rs  lib.rs
crates/elif-core-derive/tests/: injectable_integration_test.rs  injectable_ui_tests.rs
crates/elif-email/: Cargo.toml
crates/elif-email/src/: compression.rs  config.rs  error.rs  integration_example.rs  lib.rs  mailable.rs  queue.rs  tracking.rs  validation.rs
crates/elif-http/: Cargo.toml
crates/elif-http-derive/: Cargo.toml  README.md
crates/elif-http-derive/examples/: advanced_routing_demo.rs
crates/elif-http-derive/src/: controller.rs  debug.rs  groups.rs  http_methods.rs  inject.rs  lib.rs  middleware.rs  module.rs  params.rs  routes.rs  test.rs  utils.rs
crates/elif-http-derive/tests/: async_body_test.rs  body_injection_core_test.rs  comprehensive_body_test.rs  controller_impl_test.rs  debug_macro_test.rs  detailed_param_test.rs  epic_3_integration_test.rs  inject_integration_test.rs  inject_token_tests.rs  integration_test.rs  module_integration_test.rs  parameter_injection_test.rs  parameter_metadata_test.rs  parameter_types_test.rs  return_type_handling_test.rs  simple_body_test.rs  test_optional_with_attributes.rs  ui_tests.rs  uuid_parameter_test.rs
crates/elif-http/examples/: custom_routes.rs  request_response_demo.rs  response_builder_demo.rs  simple_stateful_server.rs  websocket_channel_demo.rs  websocket_demo.rs
crates/elif-http/src/: auth.rs  config.rs  controller.rs  database.rs  error.rs  handler.rs  integration_tests.rs  json.rs  lib.rs  logging.rs  middleware.rs  minimal_server.rs  request.rs  response.rs  server.rs  server_with_middleware.rs  simple_server.rs  simple_stateful_server.rs  stateful_server.rs  tests.rs
crates/elif-http/tests/: api_versioning_tests.rs  controller_arc_test.rs  controller_auto_registration_test.rs  controller_macro_test.rs  controller_metadata_test.rs  controller_phase2_integration_test.rs  controller_true_auto_registration_test.rs  e2e_tests.rs  integration_tests.rs  phase3_integration_test.rs  proper_integration_tests.rs
crates/elif-macros/: Cargo.toml
crates/elif-macros/src/: lib.rs
crates/elif-macros/tests/: bootstrap_tests.rs  ui_tests.rs
crates/elif-openapi/: Cargo.toml
crates/elif-openapi-derive/: Cargo.toml
crates/elif-openapi-derive/src/: lib.rs
crates/elif-openapi/src/: config.rs  discovery.rs  endpoints.rs  error.rs  export.rs  generator.rs  lib.rs  macros.rs  schema.rs  specification.rs  swagger.rs  test_utils.rs  utils.rs
crates/elif-openapi/templates/: swagger-ui-bundle.js  swagger-ui-standalone-preset.js  swagger-ui.css
crates/elif-queue/: Cargo.toml
crates/elif-queue/src/: config.rs  lib.rs  scheduler.rs  worker.rs
crates/elif-security/: Cargo.toml  SECURITY.md
crates/elif-security/examples/: basic_security.rs  production_security.rs
crates/elif-security/src/: config.rs  integration.rs  lib.rs
crates/elif-security/tests/: security_attacks.rs
crates/elif-storage/: Cargo.toml  README.md
crates/elif-storage/examples/: basic_usage.rs
crates/elif-storage/src/: cleanup.rs  config.rs  image_processing.rs  lib.rs  permissions.rs  upload.rs  validation.rs
crates/elif-testing/: Cargo.toml
crates/elif-testing/src/: assertions.rs  auth.rs  client.rs  database.rs  factories.rs  lib.rs  performance.rs
crates/elif-validation/: Cargo.toml
crates/elif-validation/examples/: validation_demo.rs
crates/elif-validation/src/: error.rs  lib.rs  rules.rs  traits.rs
crates/elif/src/: lib.rs  macros.rs  prelude.rs
crates/introspect/: Cargo.toml
crates/orm/: Cargo.toml  README.md
examples/blog-with-observers/: Cargo.toml  README.md  main.rs
test-app/: Cargo.toml  LLM.md  README.md
test-app/.elif/: errors.yaml  manifest.yaml
test-app/src/: main.rs
(+655 files in other folders)
