[workspace]
members = [
    "crates/core",
    "crates/orm",
    "crates/codegen",
    "crates/introspect",
    "crates/cli",
    "crates/elif-http",
    "crates/elif-security",
    "crates/elif-validation",
]
resolver = "2"

[workspace.dependencies]
# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout", "limit", "cors"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# OpenAPI
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
async-trait = "0.1"


# CLI
clap = { version = "4.0", features = ["derive"] }
tinytemplate = "1.2"

# Dev dependencies
[workspace.dev-dependencies]
tokio-test = "0.4"