[package]
name = "elif-api"
version = "0.1.0"
edition = "2021"

[dependencies]
elif-core = { path = "../../crates/core" }
elif-orm = { path = "../../crates/orm" }
elif-introspect = { path = "../../crates/introspect" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }