[package]
name = "elifrs"
version = "0.6.1"
edition = "2021"
description = "LLM-friendly Rust web framework CLI with migration system - AI agent-optimized development tools"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elifrs"
readme = "README.md"
keywords = ["web", "framework", "cli", "ai", "llm"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[[bin]]
name = "elifrs"
path = "src/main.rs"

[dependencies]
elif-core = { version = "0.3.0", path = "../core" }
elif-codegen = { version = "0.3.1", path = "../codegen" }
elif-introspect = { version = "0.2.1", path = "../introspect" }
elif-orm = { version = "0.6.0", path = "../orm" }
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
handlebars = "4.4"

[dev-dependencies]
tempfile = "3.8"