[package]
name = "elifrs"
version = "0.11.6"
edition = "2021"
description = "elif.rs CLI - Convention over configuration web framework tooling with zero-boilerplate project generation"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elifrs"
readme = "README.md"
keywords = ["web", "framework", "cli", "ai", "llm"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[[bin]]
name = "elifrs"
path = "src/main.rs"

[dependencies]
elif-core = { version = "0.7.1", path = "../core" }
elif-codegen = { version = "0.4.0", path = "../codegen" }
elif-introspect = { version = "0.3.0", path = "../introspect" }
elif-orm = { version = "0.7.1", path = "../orm" }
elif-openapi = { version = "0.2.1", path = "../elif-openapi" }
sqlx = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
tera = "1.19"
csv = "1.3"
async-trait = "0.1"
thiserror = "1.0"
service-builder = "0.3.0"
notify = "6.1"
crossbeam-channel = "0.5"
toml = "0.8"
sysinfo = "0.32"
regex = "1.10"
inquire = "0.7"
console = "0.15"
indicatif = "0.17"
git2 = "0.19"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"