[package]
name = "elif-codegen"
version = "0.4.0"
edition = "2021"
description = "Code generation utilities for the elif.rs web framework"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-codegen"
keywords = ["codegen", "web", "framework", "ai", "llm"]
categories = ["web-programming", "development-tools"]

[dependencies]
elif-core = { version = "0.7.0", path = "../core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
tinytemplate = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.0"