[package]
name = "elif-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
service-builder = "0.2.2"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
lazy_static = "1.4"