[package]
name = "elif-core"
version = "0.7.1"
edition = "2021"
description = "Core architecture foundation for the elif.rs LLM-friendly web framework"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-core"
keywords = ["web", "framework", "dependency-injection", "ai", "llm"]
categories = ["web-programming", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
service-builder = "0.3.0"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
lazy_static = "1.4"
async-trait = "0.1"
serial_test = "3.0"
trybuild = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "module_runtime_benchmarks"
harness = false