[package]
name = "elif-auth"
version = "0.2.0"
edition = "2021"
description = "Authentication and authorization system for elif.rs framework - JWT, sessions, RBAC, password hashing, and middleware"
license = "MIT OR Apache-2.0"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-auth"
keywords = ["authentication", "authorization", "rbac", "jwt", "web"]
categories = ["web-programming", "authentication", "cryptography"]
readme = "README.md"

[dependencies]
# Framework dependencies
elif-core = { path = "../core", version = "0.2.1" }
elif-orm = { path = "../orm", version = "0.5.1" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography and hashing
argon2 = { version = "0.5", features = ["std"], optional = true }
bcrypt = { version = "0.15", optional = true }
rand = "0.8"

# JWT support
jsonwebtoken = { version = "9.2", optional = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }

# MFA and TOTP support
totp-lite = { version = "2.0", optional = true }
qrcode = { version = "0.14", optional = true }
base32 = { version = "0.5", optional = true }
urlencoding = { version = "2.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["argon2", "bcrypt", "jwt", "mfa"]
argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]
jwt = ["dep:jsonwebtoken"]
session = []
mfa = ["dep:totp-lite", "dep:qrcode", "dep:base32", "dep:urlencoding"]