[package]
name = "elif-cache"
version = "0.1.0"
edition = "2021"
description = "Multi-backend caching system for elif.rs framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/krcpa/elif.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing and encoding
blake3 = "1.0"
hex = "0.4"

# Memory backend dependencies
dashmap = "5.0"
parking_lot = "0.12"
rand = "0.8"

# Pattern matching
regex = "1.0"
wildmatch = "2.1"

# Async utilities
futures = "0.3"

# Redis backend (optional)
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"], optional = true }

# Configuration
elif-core = { path = "../core" }
service-builder = "0.3.0"

# HTTP integration
elif-http = { path = "../elif-http", optional = true }
axum = { version = "0.7", optional = true }

[features]
default = ["memory"]
memory = []
redis-backend = ["redis"]
http-cache = ["elif-http", "axum"]
all = ["memory", "redis-backend", "http-cache"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"