[package]
name = "elif-openapi-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for elif-openapi OpenAPI schema generation"
license = "MIT"
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-openapi-derive"
keywords = ["web", "api", "openapi", "macro", "derive"]
categories = ["web-programming", "development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"