[package]
name = "elif-openapi"
version = "0.1.0"
edition = "2021"
description = "OpenAPI 3.0 specification generation for elif.rs framework"
license = "MIT"
repository = "https://github.com/krcpa/elif.rs"
keywords = ["web", "api", "documentation", "openapi", "swagger"]
categories = ["web-programming", "development-tools"]

[dependencies]
# Core elif dependencies
elif-core = { path = "../core", version = "0.3.0" }
elif-http = { path = "../elif-http", version = "0.5.1" }
elif-orm = { path = "../orm", version = "0.6.0" }

# Serialization and JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }

# HTTP and web utilities
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Procedural macros and code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
elif-openapi-derive = { path = "../elif-openapi-derive" }

# Type reflection and inspection
inventory = "0.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regex for path parameter extraction
regex = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
swagger-ui = []