[package]
name = "elif-security"
version = "0.1.0"
edition = "2021"
description = "Security middleware and utilities for the elif.rs web framework"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-security"
keywords = ["web", "security", "middleware", "cors", "csrf"]
categories = ["web-programming", "authentication"]

[dependencies]
# Core framework dependencies
elif-core = { version = "0.1.0", path = "../core" }
elif-http = { version = "0.2.0", path = "../elif-http" }

# HTTP and async
axum = "0.7"
tower = "0.4"
tokio = { version = "1.0", features = ["full"] }

# Serialization and HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"

# Error handling and utilities
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# Logging
log = "0.4"

# Time and crypto utilities
time = { version = "0.3", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15.0"