[package]
name = "elif"
version = "0.8.0"
edition = "2021"
description = "Modern Rust web framework designed for exceptional developer experience"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif"
keywords = ["web", "framework", "http", "async", "api"]
categories = ["web-programming::http-server"]

[dependencies]
# Re-export sub-packages (umbrella package depends on all others)
elif-core = { version = "0.5.0", path = "../core" }
elif-http = { version = "0.7.0", path = "../elif-http" }
elif-orm = { version = "0.7.0", path = "../orm" }
elif-auth = { version = "0.4.0", path = "../elif-auth" }
elif-cache = { version = "0.3.0", path = "../elif-cache" }

# Macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Common dependencies for prelude
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
env_logger = "0.10"

# Remove proc-macro from main crate - we'll create a separate macro crate later
# [lib]
# proc-macro = true

[dev-dependencies]
tokio-test = "0.4"