[package]
name = "elif-introspect"
version = "0.2.1"
edition = "2021"
description = "Project introspection and analysis tools for the elif.rs web framework"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-introspect"
keywords = ["introspection", "analysis", "web", "framework", "ai"]
categories = ["web-programming", "development-tools"]

[dependencies]
elif-core = { version = "0.3.0", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }