[package]
name = "elif-orm"
version = "0.5.1"
edition = "2021"
description = "Production-ready ORM with migrations, database services, connection pooling, and query builder"
license = "MIT"
authors = ["krcpa <krcpa@users.noreply.github.com>"]
repository = "https://github.com/krcpa/elif.rs"
homepage = "https://github.com/krcpa/elif.rs"
documentation = "https://docs.rs/elif-orm"
keywords = ["orm", "database", "web", "framework", "sql"]
categories = ["web-programming", "database"]

[dependencies]
elif-core = { version = "0.2.1", path = "../core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"